--- a/style.css
+++ b/style.css
@@ -59,13 +59,6 @@
   background-color: #c5f1b5;
 }
 
-.keys:active {
-  background: #f7fff4;
-  border-radius: 20px;
-  -webkit-box-shadow: 0px 0px 0px 0px rgba(34, 60, 80, 0.25);
-  box-shadow: 0px 0px 0px 0px rgba(34, 60, 80, 0.25);
-}
-
 .backspace-key {
   width: 110px;
   background-color: #f7fff4;
@@ -117,4 +110,18 @@
 
 .space-key {
   width: 447px;
+}
+
+.active {
+  background-color: #c5f1b5;
+  border-radius: 20px;
+  -webkit-box-shadow: 0px 0px 0px 0px rgba(34, 60, 80, 0.25);
+  box-shadow: 0px 0px 0px 0px rgba(34, 60, 80, 0.25);
+}
+
+.keys:active {
+  background: #f7fff4;
+  border-radius: 20px;
+  -webkit-box-shadow: 0px 0px 0px 0px rgba(34, 60, 80, 0.25);
+  box-shadow: 0px 0px 0px 0px rgba(34, 60, 80, 0.25);
 }
